@@ -5,6 +5,7 @@
 - Moved SelectionTool & TranslateTool to the toolbar
 - Moved the terrain tools to the component widget in the inspector
 - Removed the tools tab in the left sidebar
+- Changed input handling for terrain brushes: the mouse has to be moved constantly in order to draw
 
 [0.0.5] ~ 26/01/2016
 - Implemented a basic component based 3D scene graph
